--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
   <header>
     <h1 class="main-title">The Slots</h1>
   </header>
-  <main > 
+  <main class="flex-center-column"> 
     
     <section class="slots"></section>
+    <div class="winnings-base">
+      <span>Cash: $</span><span class="winnings"></span>
+    </div>
   </main>
   <!-- Button Div -->
   <footer class="control-ui">
@@ -32,7 +35,6 @@
     <div class="button-base">
       <button id="godMode" class="god-mode-button">God Mode</button>
     </div>
-    <div class="winnings"></div>
   </footer>
 </div>
   
