--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
     </div>
   </main>
   <!-- Button Div -->
-  <footer class="control-ui">
+  <footer class="control-ui flex-center-column">
     <!-- Spin Button -->
-    <div class="button-base">
-      <button id="startSpinButton" class="spin-button">Spin</button>
+    <div class="flex-center-column mt-20">
+      <div class="button-base">
+        <button id="startSpinButton" class="spin-button">Spin</button>
+      </div>
     </div>
-    <div class="button-base">
-      <button id="godMode" class="god-mode-button">God Mode</button>
+    <div class="flex-center-column mt-20">
+      <div class="button-base">
+        <button id="godMode" class="god-mode-button">God Mode</button>
+      </div>
     </div>
   </footer>
 </div>
